test/mutation_analysis/s0028_find_the_index_of_the_first_occurrence_in_a_string/hafis/starchat/mutants/13/result.txt
./test/mutation_analysis/s0028_find_the_index_of_the_first_occurrence_in_a_string/hafis/starchat/mutants/13/Solution.java:16: warning: A non-pure method is being called where it is not permitted: java.lang.String.contains(java.lang.CharSequence)
//@ ensures(((!(needle.length() == 0)) && (needle.contains(haystack))) ==> ((\result >= 0) && (\result < haystack.length())));
                                                          ^
./test/mutation_analysis/s0028_find_the_index_of_the_first_occurrence_in_a_string/hafis/starchat/mutants/13/Solution.java:18: warning: A non-pure method is being called where it is not permitted: java.lang.String.contains(java.lang.CharSequence)
//@ ensures(((!(needle.length() == 0)) && (!(needle.contains(haystack)))) ==> (\result == -1));
                                                            ^
./test/mutation_analysis/s0028_find_the_index_of_the_first_occurrence_in_a_string/hafis/starchat/mutants/13/Solution.java:19: warning: A non-pure method is being called where it is not permitted: java.lang.String.contains(java.lang.CharSequence)
//@ ensures((!(haystack.length() == 0)) && ((!(needle.length() == 0)) && ((\result == -1) && (needle.contains(haystack)))));
                                                                                                             ^
./test/mutation_analysis/s0028_find_the_index_of_the_first_occurrence_in_a_string/hafis/starchat/mutants/13/Solution.java:29: error: unreachable statement
        for (int start = 0; false; start++) {
                                            ^
1 error
3 warnings
